--- a/css/global/global.css
+++ b/css/global/global.css
@@ -12,6 +12,11 @@ ul {
 }
 
 h1,
+h2,
+h3,
+h4,
+h5,
+h6,
 p {
   margin: 0px;
 }
@@ -24,4 +29,8 @@ a {
 img {
   max-width: 100%;
   display: block;
+}
+
+img[src$=".jpg"] {
+  border-radius: 4px;
 }
