--- a/css/utilidades/componentes.css
+++ b/css/utilidades/componentes.css
@@ -9,7 +9,6 @@
 }
 
 /* Botão */
-
 .botao {
   display: inline-block;
   padding: 16px 32px;
@@ -64,7 +63,6 @@
 }
 
 /* Link */
-
 .link {
   display: inline-block;
   color: var(--cor-p1);
@@ -89,6 +87,10 @@
   padding-top: 60px;
   padding-bottom: 60px;
   background-color: var(--cor-11);
+}
+
+.titulo {
+  background: url("../../img/dec/top-right.svg") no-repeat top right 20px;
 }
 
 .titulo p {
